# cadastro_cliente_pytest

./: .gitignore  README.md  pyproject.toml  regras.txt  requirements.txt
functions/: cadastro_cliente.py
tests/: test_cadastro_cliente.py
