[tool.poetry]
name = "projetos"
version = "0.1.0"
description = ""
authors = ["Gus1101 <augustosantosb60@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.1"
taskipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "poetry run python -m pytest"
